[project]
name = "lab5-metrics-jesus"
version = "0.1.0"
description = "Analisis de imagenes Jesus"
authors = [
    {name = "Jesus Ramos", email = "jramosalc@ucvvirtual.edu.pe"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "fastapi",
    "uvicorn",
    "python-multipart"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "lab5_metrics", from = "src"}]